fix hint dialog width on smaller screens

--- a/webapp/src/features/creating/HintDialog.module.scss
+++ b/webapp/src/features/creating/HintDialog.module.scss
@@ -1,3 +1,8 @@
+.dialog {
+  min-width: 400px;
+  width: 40vw;
+}
+
 .label {
   font-weight: bold;
   margin: 0 0 12px 0;
